--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
   <!-- Data files -->
   <script type="text/javascript" src="sensor_data/oneday.json"></script>
   <!-- dashboard files -->
-  <script src="js/Dashboard/Dashboard.js"></script>
-  <script src="js/Dashboard/DashboardPanel.js"></script>
-  <script src="js/Dashboard/PanelBarChart.js"></script>
-  <script src="js/Dashboard/PanelBarTwoChart.js"></script>
+  <script src="js/Dashboard.js"></script>
+  <script src="js/DashboardPanel.js"></script>
+  <script src="js/PanelBarChart.js"></script>
+  <script src="js/PanelBarTwoChart.js"></script>
   <!--Chart JS  packages-->
   <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" ></script>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" />
