--- a/public/index.html
+++ b/public/index.html
@@ -45,12 +45,16 @@
       <ul class="nav navbar-nav left">
         <li>
           <img alt="Forge Hackathon" src="/img/app_icon.jpg" height="55">
-          <img alt="Autodesk Forge" src="//developer.static.autodesk.com/images/logo_forge-2-line.png" height="20">
+          <a href="http://developer.autodesk.com" target="_blank">
+            <img alt="Autodesk Forge" src="//developer.static.autodesk.com/images/logo_forge-2-line.png" height="20">
+          </a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <img alt="Autodesk Forge" src="/img/GitHub_Logo.png" height="50">
+          <a href="https://github.com/qwe0254/Forge_Hack" target="_blank">
+            <img alt="Autodesk Forge" src="/img/GitHub_Logo.png" height="50">
+          </a>
       </ul>
     </div>
   </nav>
